tests/fixtures/syntax/valid/comment_before_case_block.repor
// a top-level comment before the case block
case "comment before case block" {
  $ true
  assert {
    exit 0
  }
}
