tests/fixtures/syntax/invalid/document_file_inside_case.repor
# `document file` is a top-level construct only, so a document block inside a
# case block fails at parse time.
case "document block inside a case" {
  document file {
    title "misplaced"
  }
  $ true
  assert {
    exit 0
  }
}
